--- a/portfolio/src/assets/admin/config.yml
+++ b/portfolio/src/assets/admin/config.yml
@@ -9,7 +9,7 @@ logo_url: https://www.soler.io/assets/img/JointLogoNoText.png
 collections:
   - name: "project" # Used in routes, e.g., /admin/collections/blog
     label: "Project" # Used in the UI
-    folder: "_projects" # The path to the folder where the documents are stored
+    folder: "src/items/projects" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
