--- a/portfolio/src/assets/admin/config.yml
+++ b/portfolio/src/assets/admin/config.yml
@@ -7,22 +7,31 @@ site_url: https://www.soler.io
 logo_url: https://www.soler.io/assets/img/JointLogoNoText.png
 
 collections:
-  - name: "project" # Used in routes, e.g., /admin/collections/blog
-    label: "Project" # Used in the UI
-    folder: "src/items/projects" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - {label: "Name", name: "name", widget: "string"}
-      - {label: "Client", name: "client", widget: "string"}
-      - {label: "Link", name: "link", widget: "string"}
-      - {label: "Image", name: "image", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - label: "Project Type"
-        name: "project-type"
-        widget: "select"
-        options:
-          - { label: "Website", value: "far fa-window-maximize" }
-          - { label: "Instagram", value: "fab fa-instagram" }
-          - { label: "Facebook", value: "fab fa-facebook" }
-          - {label: "Twitter", value: "fab fa-twitter"}
+  - name: "items" # Used in routes, e.g., /admin/collections/blog
+    label: "Items" # Used in the UI
+    files:
+      - label: "Project List"
+        name: "project-list"
+        file: "src/items/project-list.json"
+        fields:
+          - label: "Projects"
+            name: "projects"
+            widget: "list"
+            fields:
+              - label: "Project Card"
+                name: "project-card"
+                widget: object
+                fields:
+                  - {label: "Name", name: "name", widget: "string"}
+                  - {label: "Client", name: "client", widget: "string"}
+                  - {label: "Project Description", name: "body", widget: "string"}
+                  - {label: "Link", name: "link", widget: "string"}
+                  - {label: "Image", name: "image", widget: "image"}
+                  - label: "Project Type"
+                    name: "project-type"
+                    widget: "select"
+                    options:
+                      - { label: "Website", value: "far fa-window-maximize" }
+                      - { label: "Instagram", value: "fab fa-instagram" }
+                      - { label: "Facebook", value: "fab fa-facebook" }
+                      - {label: "Twitter", value: "fab fa-twitter"}
