--- a/portfolio/src/assets/admin/config.yml
+++ b/portfolio/src/assets/admin/config.yml
@@ -34,7 +34,7 @@ collections:
                   - {label: "Name", name: "name", widget: "string"}
                   - {label: "Position", name: "position", widget: "string"}
                   - {label: "Description", name: "description", widget: "string"}
-                  - {label: "Headshot", name: "headshot", widget: "string"}
+                  - {label: "Headshot", name: "headshot", widget: "image"}
                   - label: "Skills"
                     name: "skills"
                     widget: "list"
