--- a/portfolio/src/assets/admin/config.yml
+++ b/portfolio/src/assets/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 media_folder: "portfolio/src/assets/img/uploads" # Media files will be stored in the repo under images/uploads
+public_folder: "/assets/img/uploads"
 site_url: https://www.soler.io
 logo_url: https://www.soler.io/assets/img/JointLogoNoText.png
 
@@ -19,7 +20,7 @@ collections:
           - {label: "Description", name: "description", widget: "string"}
           - {label: "Dave's Expertise", name: "daveExpertise", widget: "string"}
           - {label: "Gill's Expertise", name: "gillExpertise", widget: "string"}
-      - label: "Staff" 
+      - label: "Staff"
         name: "staff"
         file: "portfolio/src/assets/sections/staff-list.json"
         fields:
